syntax = "proto3";

package com.composite.grpcInterface.service;

option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

service UserService {
    rpc getUser (UserRequest) returns (UserReply) {
    }
}
message UserRequest {
    int32 id = 1;
}
message UserReply {
    string name = 1;
    string sex = 2;
}